@@ -1,3 +1,11 @@
+Fri Nov 30 15:35:39 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* configure.in: Added AM_GLIB_GNU_GETTEXT and
+	setting of GETTEXT_PACKAGE.
+
+	* Makefile.am: Change from xml-i18n-extract (etc.)
+	to intltool-extract (etc.)
+
 2001-11-29  Miles Lane <miles@megapathdsl.net>
 
 	* configure.in: Removed intl/Makefile from AC_OUTPUT
